src/styles/contact.css
.contact-menu {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: -webkit-center;
}

.contact-title {
  font-size: 2rem;
  margin-bottom: 4rem;
  letter-spacing: 2px;
  align-items: center !important;
  font-family: DM Sans,sans-serif;
}

form {
  display: flex;
  flex-direction: column;
  gap: 3rem;
  width: 18.5rem;
}

.form-group {
  width: 100%;
}

input,
#message {
  width: 100%;
  background-color: #00000040;
  border-radius: 0.3rem;
  border: 0.07rem solid rgba(255, 255, 255, 0.4);
  outline: none;
  color: #FFFCF2;
  padding: 0.5rem;
  font-weight: bold;
  font-size: 1rem;
  font-family: system-ui;
}

input {
  height: 1.9rem;
}

::placeholder {
  color: #FFFCF2;
  font-weight: 400;
}

#message {
  height: 6.2rem;
  resize: none;
}

button {
  color: #FFFCF2;
  font-size: 1rem;
  font-weight: 500;
  padding: 0.6rem 0;  
  width: 106%;
  background-color: #eb5e28;
  border: none;
  cursor: pointer;
  border-radius: 4px;
}

button:hover {
  background-color: #bc3908; 
  color: #FFFCF2;
}

.success-message {
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #0c090d;
  width: 100%;
  height: 12.5rem;
  border-radius: 0.3rem;
  border: 0.07rem solid rgba(255, 255, 255, 0.7);
}

.success-message p {
  margin: 0.5rem;
  padding: 0 3.7rem;
}

.error-message {
  padding: 0.3rem;
  text-align: left;
  color: #FFFCF2;
  background-color: #403D39;
  border-radius: 0.2rem;
  float: left;
}


label {
  display: none;
}

@media (max-width: 1100px) {
  .contact-menu {
    top: 40%;
  }

  .contact-title {
    padding-top: 2rem;
    margin-bottom: 2rem;
  }
}
@media (max-width: 700px) {
  .contact-menu {
    width: 70%;
  }
  form {
    width: 100%;
  }
  input,
  #message {
    width: 92%;
    font-family: system-ui;
  }
  .success-message p {
    padding: 0 0.5rem;
  }
}

